# csScripts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  book_file_creator.py  book_structure_generator.py  case_sensitive_file_renamer.py  clean_latex.py  cleanlatex.py  cs_scripts.py  directory_batch_renamer.py  file_batch_renamer.py  file_renamer.py  folder_renamer.py  git_pull_reset.py  git_repository_reset.py  latex_cleaner.py  latex_code_formatter.py  latex_document_generator.py  latex_formatter.py  make_latex.py  makelatex.py  multi_case_file_renamer.py  pdf_linearizer.py  pdf_rename.py  pdfrename.py  ps2pdf.py  pyproject.toml  python_formatter.py  requirements.txt  script_launcher.py  search_tool.py  setup.py
docs/: README.md
examples/: README.md  example_batch_rename.py  example_latex_cleaner.py
scripts/: __init__.py
scripts/document/: __init__.py  book_structure_generator.py  check_british.py  check_grammar.py  check_spelling.py  directory_indexer.py  join_lines.py  latex_auxiliary_cleaner.py  latex_code_formatter.py  latex_document_generator.py  latex_gitignore_cleaner.py  pdf_gpg_signer.py  pdf_linearizer.py  pdf_meta_analyzer.py  pdf_to_eps_converter.py  postscript_to_pdf_converter.py  remove_blank_lines.py  remove_comments.py
scripts/file_ops/: __init__.py  case_sensitive_file_renamer.py  directory_batch_renamer.py  file_batch_renamer.py  file_search_utility.py  fileops.py  mirror_shell.py  pdf_batch_renamer.py
scripts/utils/: __init__.py  check_extensions.py  chocolatey_installer.py  code_formatter.py  folder_compressor.py  git_repository_reset.py  git_squash_and_push.py  gnome_templates.py  image_to_nord_converter.py  nfo_renamer.py  package_housekeeping.py  python_code_formatter.py  setup_submodules.py  track_repos.py
tests/: test_check_british.py  test_check_grammar.py  test_check_spelling.py  test_join_lines.py  test_remove_blank_lines.py  test_remove_comments.py
